<resources>
    <string name="app_name">MyKeys</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username_or_password_incorrect">Usuario ou senha incorretos!</string>
    <string name="bemVindo">Bem vindo!</string>
    <string name="invalidUsernameOrPAss">Usuario ou senha inválidos!</string>
    <string name="access">Acesso concedido!</string>
    <string name="save_username">Save username</string>
    <string name="title_activity_new_site">NewSiteActivity</string>
    <string name="nome_do_site">Nome do site</string>
    <string name="url_site">URL</string>
    <string name="title_activity_site">SiteActivity</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="new_site">New Site</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="create_now">Create now!</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="use_fingerprint_sensor_to_login">use fingerprint sensor to login</string>
    <string name="preencher_nome">O nome deve ser preenchido!</string>
    <string name="erro_criar_usuario">Erro ao criar usuário!</string>
    <string name="usuario_criado_sucesso">Usuario criado com sucesso!</string>
    <string name="preencha_campos">Por favor preencha os campos corretamente!</string>
</resources>
